# SpaceInvaders3D

./: LICENSE  NOTICE  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.vert.spv  overlay.frag.spv  overlay.vert.spv  particles_instanced.vert.spv  stars_instanced.frag.spv  stars_instanced.vert.spv
app/src/main/assets/shaders/: aabb.vert.spv  font.frag.spv  font.vert.spv  halo.frag.spv  halo.vert.spv  main.frag.spv  main.vert.spv  particles_instanced.frag.spv  particles_instanced.vert.spv  stars_instanced.frag.spv
app/src/main/cpp/: CMakeLists.txt  Collision.cpp  Collision.h  FontManager.cpp  FontManager.h  GameObjectData.h  ParticleSystem.cpp  ParticleSystem.h  PowerUpManager.cpp  PowerUpManager.h  Renderer.cpp  Renderer.h  SFXMixer.h  SimpleSFXPlayer.cpp  SimpleSFXPlayer.h  Time.cpp  Time.h  Util.cpp  Util.h  main.cpp
app/src/main/cpp/shaders/: compile.bat  triangle.vert
app/src/main/cpp/shaders/AABB/: aabb.frag  aabb.vert
app/src/main/cpp/shaders/font/: font.frag  font.vert
app/src/main/cpp/shaders/main/: main.frag  main.vert
app/src/main/cpp/shaders/overlay/: overlay.frag  overlay.vert
app/src/main/cpp/shaders/particles/: halo.frag  halo.vert  particles_instanced.frag  particles_instanced.vert  stars_instanced.frag  stars_instanced.vert
app/src/main/cpp/stb/: stb_image.h
app/src/main/java/com/csm/spaceinvaders3d/: MyGameActivity.java
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
